fix message text-wrap

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -195,6 +195,7 @@ main div{
   color: #ffffff;
   background-color: #271c46;
   border-radius: 0px 10px 10px 10px ;
+  word-break:break-all;
 }
 
 .myMessage{
